fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,7 @@ a img {
 @media (max-width: 972px) {
   .main-section {
     align-content: space-around;
+    height: calc(var(--vh,1vh)*100 - 100px);
   }
 
   .upper {
